Made nav items clickable, fixed contact section mobile layout

--- a/src/front-end/css/section_adventure.module.scss
+++ b/src/front-end/css/section_adventure.module.scss
@@ -3,14 +3,15 @@
     width: 100vw;
     justify-content: center;
     margin-top: 24px;
+    margin-bottom: 24px;
 }
 .container {
     display: flex;
-    background-color: rgba(242, 242, 242, 1);
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     height: 138px;
     width: 80vw;
     max-width: 1280px;
+    background-color: rgba(242, 242, 242, 1);
 }
