--- a/src/front-end/css/section_desktop_navbar.module.scss
+++ b/src/front-end/css/section_desktop_navbar.module.scss
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
     height: 8vh;
     width: 100vw;
@@ -11,7 +11,7 @@
 }
 
 .circle {
-    margin-left: 2rem !important;
+    margin-left: 2rem;
     width: 25px;
     height: 25px;
     border-radius: 50%;
@@ -28,4 +28,11 @@
 .button {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+}
+.buttons a {
+    text-decoration: none;
+    color: black;
+}
+.buttons a:hover {
+    color: black;
 }
